<resources>
    <string name="app_name">MrMoika</string>
    <string name="car_registration">Я автовладелец</string>
    <string name="wash">Я хозяин мойки</string>
    <string name="title_activity_carwash_registration">CarwashRegistration</string>
    <string name="phone">Номер мобильного:</string>
    <string name="phone_hint">(777) 777-77-77</string>
    <string name="carwash_name">Название автомойки:</string>
    <string name="carwash_name_hint">Беспощадная мойка</string>
    <string name="step_one">Шаг 1. Основные данные</string>
    <string name="step_two">Шаг 2. Местоположение мойки</string>
    <string name="step_three">Шаг 3. Все верно?</string>
    <string name="registration_quit_dialog">Все введенные данные будут потеряны.\nВыйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="registration_button_confirm">Завершить регистрацию</string>
    <string name="registration_button_next">Далее</string>
    <string name="error_empty_carwash_name">Это поле не может быть пустым</string>
    <string name="error_wrong_phone_number">Номер должен содержать 10 цифр</string>
    <string name="action_registration">Далее</string>
    <string name="carwash_address">Точный адрес:</string>
    <string name="title_activity_carowner_registration">CarownerRegistration</string>
    <string name="car_type_hint">Тип кузова</string>
    <string name="car_brand_hint">Марка</string>
    <string name="car_model_hint">Модель</string>
    <string name="popup_menu1">легковая</string>
    <string name="popup_menu2">паркетник</string>
    <string name="popup_menu3">джип</string>
    <string name="popup_menu4">микроавтобус</string>
</resources>
