<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:isScrollContainer="false"
    tools:context="com.lessugly.mrmoika.registration.CarwashRegistration.ThirdStep">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/phoneHint"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/text_secondary" />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/carwashPhoneCode"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:inputType="none"
            android:editable="false"
            android:maxLength="2"
            android:text="+7"
            android:paddingTop="24dp" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carwashPhone"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:inputType="number"
            android:textColorHint="@color/text_hint"
            android:maxLength="15"
            android:hint="@string/phone_hint"
            android:paddingTop="24dp"
            android:layout_marginLeft="48dp"
            android:text=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carwash_name"
            android:id="@+id/carwashNameHint"
            android:layout_below="@+id/carwashPhone"
            android:layout_alignParentStart="true"
            android:textColor="@color/text_secondary" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carwashName"
            android:layout_below="@+id/carwashPhone"
            android:layout_alignParentStart="true"
            android:paddingTop="24dp"
            android:inputType="text"
            android:text=""
            android:hint="@string/carwash_name_hint"
            android:textColorHint="@color/text_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carwash_address"
            android:id="@+id/carwashAddressHint"
            android:layout_below="@+id/carwashName"
            android:layout_alignParentStart="true"
            android:textColor="@color/text_secondary" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carwashAddress"
            android:layout_below="@+id/carwashName"
            android:layout_alignParentStart="true"
            android:paddingTop="24dp"
            android:inputType="text"
            android:text=""/>
    </RelativeLayout>

</RelativeLayout>
